added TIMING to config.ini

--- a/config.ini
+++ b/config.ini
@@ -9,3 +9,9 @@ empty_bowl = 10579
 half_full_bowl = 38510
 full_bowl = 47388
 
+[TIMING]
+water_bowl_polling = 0
+food_timer1 = 0
+food_timer2 =  0
+food_timer3 = 0
+food_timer4 = 0
